# Mowito_robotics-assignment-Nitheeshkumar

./: README.md
mowito-assignment-main/: Forward_Kinematics4DOF.py  README.md  euler_to_quaternion.py
mowito-assignment-main/ros_comms/: CMakeLists.txt  package.xml
mowito-assignment-main/ros_comms/src/: publisher.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
mowito-assignment-main/ros_comms/srv/: AddTwoInts.srv
mowito-assignment-main/src/: readme_bt_task.txt  readme_ros2_bt_test_cv_task.txt
mowito-assignment-main/src/dummy_usb_cam/: package.xml  setup.py
mowito-assignment-main/src/dummy_usb_cam/dummy_usb_cam/: dummy_camera_publisher.py
mowito-assignment-main/src/image_conversion/: package.xml  setup.py
mowito-assignment-main/src/image_conversion/image_conversion/: auto_image_saver.py  image_conversion_node.py  image_saver.py
mowito-assignment-main/src/image_conversion/launch/: image_conversion_launch.py
mowito-assignment-main/task3_euler_quat/: CMakeLists.txt
mowito-assignment-main/task3_euler_quat/src/: main.cpp
mowito-assignment-main/task4_fk/: CMakeLists.txt
mowito-assignment-main/task4_fk/src/: main.cpp
