<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematype="see http://download.ros.org/schema/package_format3.xsd"?>
<package format="3">
  <name>ros_comms</name>
  <version>0.0.0</version>
  <description>ROS2 Pub/Sub/Service Demo for Mowito Assignment</description>
  <maintainer email="mr.nithikumar.ssr@gmail.com">Nitheeshkumar</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

